--- a/Тестирование.md
+++ b/Тестирование.md
@@ -1,40 +1,9 @@
-[core2 routes.txt](https://github.com/user-attachments/files/16759166/core2.routes.txt)# ntw-diplom
+[core2 routes.txt](https://github.com/user-attachments/files/16759189/core2.routes.txt)[core2 routes.txt](https://github.com/user-attachments/files/16759184/core2.routes.txt)[core2 routes.txt](https://github.com/user-attachments/files/16759166/core2.routes.txt)# ntw-diplom
 Дипломная работа 
 Капотов Виталька Сергеич
 # Credencials ![image](https://github.com/user-attachments/assets/88c3dd49-bd0f-4926-9588-7e983cc76dd9)
 1. Проверка STP, HSRP. Роль Root bridge и HSRP-active на одном устройстве. Команды: show spanning-tree, show standby на этом устройстве.
  [core2.txt](https://github.com/user-attachments/files/16759112/core2.txt)
-2. Проверка маршрутизации на коммутаторах ядра. Show ip route. Должен присутствовать маршрут по-умолчанию и маршруты до интерфейсов ASA и бордеров.
-   [Uploadcore2#Show ip route
-Codes: C - connected, S - static, I - IGRP, R - RIP, M - mobile, B - BGP
-       D - EIGRP, EX - EIGRP external, O - OSPF, IA - OSPF inter area
-       N1 - OSPF NSSA external type 1, N2 - OSPF NSSA external type 2
-       E1 - OSPF external type 1, E2 - OSPF external type 2, E - EGP
-       i - IS-IS, L1 - IS-IS level-1, L2 - IS-IS level-2, ia - IS-IS inter area
-       * - candidate default, U - per-user static route, o - ODR
-       P - periodic downloaded static route
+2. Проверка маршрутизации на коммутаторах ядра. Show ip route. Должен присутствовать маршрут по-умолчанию и маршруты до интерфейсов ASA и бордеров. ![image](https://github.com/user-attachments/assets/04136f81-4ed2-44b1-b7d1-d6536429e880)
 
-Gateway of last resort is not set
 
-     172.16.0.0/16 is variably subnetted, 19 subnets, 5 masks
-O       172.16.0.0/24 [110/2] via 172.16.31.5, 02:12:22, FastEthernet0/22
-C       172.16.1.0/26 is directly connected, Vlan100
-O IA    172.16.1.64/27 [110/1003] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O       172.16.1.224/32 [110/4] via 172.16.1.2, 02:12:22, Vlan100
-O       172.16.1.225/32 [110/3] via 172.16.31.5, 02:12:22, FastEthernet0/22
-C       172.16.2.0/24 is directly connected, Vlan200
-C       172.16.3.0/24 is directly connected, Vlan300
-C       172.16.4.0/24 is directly connected, Vlan400
-C       172.16.5.0/24 is directly connected, Vlan500
-O IA    172.16.8.0/24 [110/1003] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O IA    172.16.9.0/24 [110/1003] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O IA    172.16.10.0/24 [110/1003] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O       172.16.31.0/30 [110/2] via 172.16.1.2, 02:12:22, Vlan100
-C       172.16.31.4/30 is directly connected, FastEthernet0/22
-O       172.16.31.8/30 [110/3] via 172.16.1.2, 02:12:22, Vlan100
-O       172.16.31.12/30 [110/2] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O IA    172.16.31.16/30 [110/2002] via 172.16.31.5, 02:12:22, FastEthernet0/22
-O IA    172.16.31.20/30 [110/1003] via 172.16.1.2, 02:12:22, Vlan100
-O IA    172.16.31.24/30 [110/1002] via 172.16.31.5, 02:12:22, FastEthernet0/22
-
-core2#  ing core2 routes.txt…]()
