--- a/Тестирование.md
+++ b/Тестирование.md
@@ -4,6 +4,10 @@
 # Credencials ![image](https://github.com/user-attachments/assets/88c3dd49-bd0f-4926-9588-7e983cc76dd9)
 1. Проверка STP, HSRP. Роль Root bridge и HSRP-active на одном устройстве. Команды: show spanning-tree, show standby на этом устройстве.
  [core2.txt](https://github.com/user-attachments/files/16759112/core2.txt)
-2. Проверка маршрутизации на коммутаторах ядра. Show ip route. Должен присутствовать маршрут по-умолчанию и маршруты до интерфейсов ASA и бордеров. ![image](https://github.com/user-attachments/assets/04136f81-4ed2-44b1-b7d1-d6536429e880)
+2. Проверка маршрутизации на коммутаторах ядра. Show ip route. Должен присутствовать маршрут по-умолчанию и маршруты до интерфейсов ASA и бордеров.
+  
+   ![image](https://github.com/user-attachments/assets/04136f81-4ed2-44b1-b7d1-d6536429e880)
+
+3. ![image](https://github.com/user-attachments/assets/4fc1d518-f3a2-4415-87aa-53bb1770ccb0)
 
 
