--- a/Тестирование.md
+++ b/Тестирование.md
@@ -1,4 +1,4 @@
-[core2 routes.txt](https://github.com/user-attachments/files/16759189/core2.routes.txt)[core2 routes.txt](https://github.com/user-attachments/files/16759184/core2.routes.txt)[core2 routes.txt](https://github.com/user-attachments/files/16759166/core2.routes.txt)# ntw-diplom
+ntw-diplom
 Дипломная работа 
 Капотов Виталька Сергеич
 # Credencials ![image](https://github.com/user-attachments/assets/88c3dd49-bd0f-4926-9588-7e983cc76dd9)
