--- a/Тестирование.md
+++ b/Тестирование.md
@@ -1,4 +1,5 @@
 ntw-diplom
+
 Дипломная работа 
 Капотов Виталька Сергеич
 # Credencials ![image](https://github.com/user-attachments/assets/88c3dd49-bd0f-4926-9588-7e983cc76dd9)
@@ -8,6 +9,10 @@ ntw-diplom
   
    ![image](https://github.com/user-attachments/assets/04136f81-4ed2-44b1-b7d1-d6536429e880)
 
-3. ![image](https://github.com/user-attachments/assets/4fc1d518-f3a2-4415-87aa-53bb1770ccb0)
+3. Проверка LAG на коммутаторах ядра show etherchannel summary.
+    ![image](https://github.com/user-attachments/assets/4fc1d518-f3a2-4415-87aa-53bb1770ccb0)
 
+4. Маршрутизация на бордерах sh ip route. В таблице маршрутизации должны присутствовать bgp-маршруты от провайдера, ospf-маршруты до внутренних подсетей ЦО и филиала.
+   ![image](https://github.com/user-attachments/assets/621f6981-7a8e-4842-8aae-b07aeb5aa8b9)
 
+6. Туннель CAPWAP на БЛВС ТД в статусе Connected, с ноутбуков есть связь с 8.8.8.8.
