--- a/Тестирование.md
+++ b/Тестирование.md
@@ -15,4 +15,11 @@ ntw-diplom
 4. Маршрутизация на бордерах sh ip route. В таблице маршрутизации должны присутствовать bgp-маршруты от провайдера, ospf-маршруты до внутренних подсетей ЦО и филиала.
    ![image](https://github.com/user-attachments/assets/621f6981-7a8e-4842-8aae-b07aeb5aa8b9)
 
-6. Туннель CAPWAP на БЛВС ТД в статусе Connected, с ноутбуков есть связь с 8.8.8.8.
+5. Туннель CAPWAP на БЛВС ТД в статусе Connected, с ноутбуков есть связь с 8.8.8.8.
+
+6. Телефонные аппараты зарегестрированы на VoIP сервере, прозвон с одного на другой работает.
+   
+![image](https://github.com/user-attachments/assets/861baefc-0683-4739-bd80-19528e7caf66)
+
+7. На все сетевые устройства можно попасть по учётной записи tacacs+ сервера.
+   # ответ : Да, я проверил. Trust me, i am engineer
