--- a/Тестирование.md
+++ b/Тестирование.md
@@ -23,3 +23,6 @@ ntw-diplom
 
 7. На все сетевые устройства можно попасть по учётной записи tacacs+ сервера.
    # ответ : Да, я проверил. Trust me, i am engineer
+   
+8. Время на устройствах синхронизировано. Show ntp status.
+   ![image](https://github.com/user-attachments/assets/642b19ab-5c73-4d48-9072-1b2d52e8f42d)
