--- a/Тестирование.md
+++ b/Тестирование.md
@@ -23,3 +23,40 @@
 7. Время на устройствах синхронизировано. Show ntp status.
    ![image](https://github.com/user-attachments/assets/642b19ab-5c73-4d48-9072-1b2d52e8f42d)
 
+8. Всё остальное тоже по идее работает корректно.
+
+
+
+
+   По поводу GRE
+   Протокол GRE: Недостатки и Альтернативы
+
+Недостатки GRE:
+
+1. Отсутствие аутентификации: GRE не обеспечивает аутентификации, что делает его уязвимым для атак типа "человек посередине".
+2. Отсутствие шифрования: Данные передаются по сети в незашифрованном виде, что делает их доступными для перехвата.
+3. Зависимость от маршрутизации IP: GRE полагается на маршрутизацию IP, что может привести к проблемам с маршрутизацией трафика.
+4. Отсутствие управления полосой пропускания: GRE не предоставляет средств управления полосой пропускания, что может привести к перегрузке сети.
+5. Сложность настройки: GRE требует сложной настройки, особенно в многоузловых средах.
+6. Отсутствие поддержки QoS: GRE не поддерживает QoS, что может негативно повлиять на качество предоставляемых услуг.
+7. Низкая производительность: GRE может создавать дополнительную нагрузку на сеть, что может снизить ее производительность.
+8. Устаревший протокол: GRE - это устаревший протокол, который не рекомендуется использовать в новых проектах.
+9. Отсутствие поддержки IPv6: GRE не поддерживает IPv6, что ограничивает его применение в будущем.
+10. Проблемы с NAT: GRE может создавать проблемы с NAT, особенно в сложных сетевых конфигурациях.
+11. Ненадежность: GRE не обеспечивает надежную передачу данных, что может привести к потерям пакетов.
+12. Отсутствие поддержки multicast: GRE не поддерживает multicast, что ограничивает его функциональность.
+13. Уязвимость для атак DoS: GRE может быть уязвим для атак типа DoS, что может нарушить работу сети.
+14. Сложность отладки: GRE может быть сложным в отладке, особенно в случае проблем с маршрутизацией.
+15. Отсутствие поддержки VPN: GRE не поддерживает VPN, что делает его непригодным для создания защищенных туннелей.
+
+Альтернативы GRE:
+
+* IPsec: IPsec обеспечивает аутентификацию, шифрование и управление полосой пропускания, что делает его более безопасным и надежным решением.
+* SSL VPN: SSL VPN обеспечивает безопасное соединение между ЦО и филиалом с помощью шифрования SSL.
+* WireGuard: WireGuard - это новый VPN-протокол, который отличается высокой скоростью и простотой настройки.
+* OpenVPN: OpenVPN - это широко используемый VPN-протокол, который обеспечивает высокую степень безопасности и гибкость настройки.
+
+Рекомендуется:
+
+* Использовать IPsec, SSL VPN или WireGuard для создания защищенного туннеля между ЦО и филиалом.
+* Избегать использования GRE в новых проектах из-за его недостатков в области безопасности и производительности.
