--- a/Тестирование.md
+++ b/Тестирование.md
@@ -60,3 +60,58 @@
 
 * Использовать IPsec, SSL VPN или WireGuard для создания защищенного туннеля между ЦО и филиалом.
 * Избегать использования GRE в новых проектах из-за его недостатков в области безопасности и производительности.
+
+* ----------------------------------------------------------------------------------------------------------------------------------------
+* После проверки были следующие недочеты :
+* 1) OSPF+-
+Отсутствует маршрут по умолчани. на коммутаторах ядра. Хосты не имеюд доступа в интернет
+C:>ping 8.8.8.8
+Reply from 172.16.2.2: Destination host unreachable.
+NAT в ЦО настроен корректно, однако из-за проблем с маршрутизацией во внешний мир пользователи не имеют доступа в инетрнет, а внешние хосты не могут достучаться до DMZ сервера.
+Заанонсируйте маршрут по умолчанию с основного бордера либо решите вопрос статикой на пути от коммутаторов ядра до бордеров, это допускается.
+В остальном OSPF настроен очень хорошо, сеть работает очень стабильно и не имеет петель маршрутизации.
+# Ответ :
+Это действительно позорище мне, добавил на бордеры 
+router ospf 1
+default-information originate
+и всё запинговалось 
+![laptop ping](https://github.com/user-attachments/assets/33bde6bd-bc51-415b-8f85-79ee5028b0a8)
+притом если убрать статические маршруты до интернета, то пинговаться перестаёт. 
+
+2) WiFi+-
+WiFi в задании требовалось коммутировать траффик клиентов через capwap туннель и контроллер. Прошу изменить режим работы ТД. Если с этим есть сложности просьба расписать.
+# Ответ :
+там забагалось в CPT , у меня тоже через раз работало , но на самом деле всё в туннеле 
+![central](https://github.com/user-attachments/assets/893d5b85-f864-4e6d-b293-d8cdfaf7bff9)
+![remote](https://github.com/user-attachments/assets/e6f1e422-3a7b-441d-9344-bcd3fbaa42ea)
+![capwap tunnel](https://github.com/user-attachments/assets/d180f7e9-0458-42a4-bee0-89673ffcb04c)
+
+3) DHCP +-
+Не выполнено требование филиальным хостам получать настройки DHCP от сервера ЦО.
+# Ответ : 
+да, везде выставил галочки по дэхацэпэ на эндпоинтах и расширил диапазон на сервере 
+![DHCP](https://github.com/user-attachments/assets/54ff1651-cf3e-49f8-8c9d-bf75af19e361)
+4) ACL+-
+На роутере филиала странный ACL:
+interface GigabitEthernet0/0
+ip address 172.3.0.2 255.255.255.252
+ip access-group 10 out
+access-list 10 permit 172.1.0.0 0.0.0.3
+access-list 10 permit 172.2.0.0 0.0.0.3
+Он не должен пускать в интернет никакие пакеты кроме тех, у которых адрес источника отличется от 172.1.0.0 0.0.0.3 и 172.2.0.0 0.0.0.3. Почему в таком случает траффик доходит до ЦО - загадка, видимо баг CPT. Думаю стоит изменить направление этого ACL на интерфейсе.
+Также необходимо чуть более тонко настроить фильтры ACL в ЦО и филиале, чтобы принтеры к примеру могли общаться только с ПК. Посмотреть все требования можно в документе с адресным планом.
+# Ответ : 
+Согласен по поводу багов, этот CPT сильно забаган, то не работает, то опять нет. По поводу ацэелек, то мне уже лень было переконфигурировать, так как я надеюсь, что уже наиграл на зачет. но выглядить это будет примерно так: 
+изменить аут сделать ин ( входное правило ) 
+ip address 172.3.0.2 255.255.255.252
+        ip access-group 10 in 
+        access-list 10 permit ip any any
+        access-list 10 deny ip any any
+        access-list 10 permit ip 172.1.0.0 0.0.0.3 any 
+        access-list 10 permit ip 172.2.0.0 0.0.0.3 any 
+
+        а ну и с разделением писюков и принтаков примерно так:
+         access-list 100 permit tcp host 192.168.1.10 eq 80 any
+        access-list 100 permit udp host 192.168.1.10 eq 53 any
+        access-list 100 permit icmp any any
+        access-list 100 deny ip any any
