--- a/Тестирование.md
+++ b/Тестирование.md
@@ -130,6 +130,7 @@ ip address 172.3.0.2 255.255.255.252
 
 
 -----------------------------------------------------------------------------------------------------------------------------
+15 сентября 2024 года
 Третья итерация (на этот раз уже сконцентрирован и серьёзен, выделил время для дела, а не по 10 минут в обеденом перерыве исравляю недочёты)
 Список косяков : 
 1) На бордерах ЦО оставлять статику не дело, с базовым BGP у CPT проблем нет. Лучше проверить и найти проблему связности ПК с интернетом, а проблема скорее всего в том, что на коммутаторах ядра маршрут по умолчанию от бордеров появился. Причём сразу два. Мы получаем петлю маршрутизации(проверяется tarcert-ом от клиента). Самый просто вариант её избежать - разорвать ospf соседство между коммутаторами ядра, а при возникновении аварии соседство поднимать. К сожалению CPT до сих пор не поддерживает OSPF external E1 маршруты, а у Е2 одинаковая метрика для каждого пути. Коммутаторы ядра меют маршрут по умолчанию друг на друга.
