--- a/Тестирование.md
+++ b/Тестирование.md
@@ -134,7 +134,7 @@ ip address 172.3.0.2 255.255.255.252
 Третья итерация (на этот раз уже сконцентрирован и серьёзен, выделил время для дела, а не по 10 минут в обеденом перерыве исравляю недочёты)
 Список косяков : 
 1) На бордерах ЦО оставлять статику не дело, с базовым BGP у CPT проблем нет. Лучше проверить и найти проблему связности ПК с интернетом, а проблема скорее всего в том, что на коммутаторах ядра маршрут по умолчанию от бордеров появился. Причём сразу два. Мы получаем петлю маршрутизации(проверяется tarcert-ом от клиента). Самый просто вариант её избежать - разорвать ospf соседство между коммутаторами ядра, а при возникновении аварии соседство поднимать. К сожалению CPT до сих пор не поддерживает OSPF external E1 маршруты, а у Е2 одинаковая метрика для каждого пути. Коммутаторы ядра меют маршрут по умолчанию друг на друга.
-# Ответ : Статику на бордерах убрал, так же убрал OSPF на втором ядре, вроде всё работает штатно. 
+# Ответ : Статику на бордерах убрал, так же убрал OSPF на втором ядре, вроде всё работает штатно. Изначально хотел сделать neighbor <ip-адрес-соседа> passive, но не нашёл такую команду, как обычно. 
 2) Маршрут по умолчания также начал анонситься в филиал, из-за чего получает ошибку
 Mar 01, 00:00:45.000: %TUN-5-RECURDOWN: 1 temporarily disabled due to recursive routing
 Из-за ошибки сыпятся туннели до ЦО.
