--- a/Тестирование.md
+++ b/Тестирование.md
@@ -140,3 +140,82 @@ Mar 01, 00:00:45.000: %TUN-5-RECURDOWN: 1 temporarily disabled due to recursive 
 Из-за ошибки сыпятся туннели до ЦО.
 Предлагаю заанонсить в филиал только сети ЦО(можно подобрать нестандартный тип зоны), либо вообще прописать статику до и от филиала с разными AD.
 Сейчас сеть филиала н имеет связности с ЦО.
+# Ответ :  Ошибка: `%TUN-5-RECURDOWN`
+Маршрут по умолчанию аннонсируется в филиал, что приводит к ошибке `%TUN-5-RECURDOWN`.
+Это связано с рекурсивной маршрутизацией - туннель пытается маршрутизировать трафик через себя, создавая бесконечный цикл.
+
+Варианты Решения:
+
+1 Запретить аннонсирование маршрута по умолчанию в филиал: 
+    * В конфигурации OSPF на основном бордере (откуда аннонсируется маршрут по умолчанию) добавитб команду `default-information originate area <номер-области>`
+    пробовал, но не получилось, не прошла команда.  
+2 Статическая маршрутизация: 
+    * Вместо OSPF  использовать статические маршруты для связи между филиалом и ЦО. 
+    * Настроить статические маршруты с разными `AD` (Administrative Distance) на каждом устройстве, чтобы предотвратить петли. 
+    Вот с этим долго игрался, но в итоге проиграл =(((
+3 Использование нестандартного типа зоны:
+    * можно попробовать зааннонсировать только сети ЦО в филиал, используя нестандартный тип зоны OSPF (например, "internal").
+    Вот тут есть понимание как и что делать, но потрясающий циско пакет папу его трейсер не даёт мне осуществить задуманное. 
+    Идея проста: 
+    На основном бордере:
+
+router ospf 1
+  router-id 172.16.1.224
+  log-adjacency-changes
+  network 172.16.31.16 0.0.0.3 area 0
+  network 172.16.31.20 0.0.0.3 area 2
+  network 172.16.31.8 0.0.0.3 area 1
+  network 172.16.1.224 0.0.0.0 area 1
+  default-information originate area 1
+  distribute-list 1 out
+  ip prefix-list ЦО_сети permit 172.16.1.0 0.0.0.255
+  ip prefix-list ЦО_сети permit 172.16.2.0 0.0.0.255
+  ip prefix-list ЦО_сети permit 172.16.3.0 0.0.0.255
+  area 1 
+    default-information originate 
+    redistribute connected 
+    redistribute static 
+    route-map ЦО_сети out
+    redistribute prefix-list ЦО_сети 
+  !
+  area 2 
+    default-information originate 
+    redistribute connected 
+    redistribute static 
+    route-map ЦО_сети out
+    redistribute prefix-list ЦО_сети 
+  !
+  area 0 
+    default-information originate 
+    redistribute connected 
+    redistribute static 
+    route-map ЦО_сети out
+    redistribute prefix-list ЦО_сети 
+  !
+ip access-list extended ЦО_сети
+  permit ip any any
+!
+route-map ЦО_сети permit 10
+ match ip address ЦО_сети
+!
+
+В общем и целом, я слишком много времени потратил на эту задачу и пожалуй скипну её, при необходимости вернусь к ней позже. 
+-------------------------------------------------------------------------
+3) На роутере филиала по-прежнему настроен dhcp-сервер. По заданию в компании он единый и располагается в ЦО
+ip dhcp pool userpool
+network 172.16.8.0 255.255.255.0
+default-router 172.16.8.1
+ip dhcp pool voippool
+network 172.16.9.0 255.255.255.0
+default-router 172.16.9.1
+option 150 ip 172.16.4.10
+ip dhcp pool printer_pool
+network 172.16.10.0 255.255.255.0
+default-router 172.16.10.1
+# ответ : удалил dhcp на филиальном роутере. 
+
+4) Режим работы ТД настраивается на контроллере, сейчас ТД по-прежнему гонят траффик юзеров не через контроллер, а локально. Покажите скриншот, где меняется эта настройка и можно её не менять.
+   Воооооооооооооот тутьъ
+   
+![Снимок экрана 2024-09-15 173112](https://github.com/user-attachments/assets/53346456-9b82-4c58-8dc7-9cae92706713)
+
