--- a/Тестирование.md
+++ b/Тестирование.md
@@ -159,8 +159,9 @@ Mar 01, 00:00:45.000: %TUN-5-RECURDOWN: 1 temporarily disabled due to recursive 
     * можно попробовать зааннонсировать только сети ЦО в филиал, используя нестандартный тип зоны OSPF (например, "internal").
     Вот тут есть понимание как и что делать, но потрясающий циско пакет папу его трейсер не даёт мне осуществить задуманное. 
     Идея проста: 
+    
     На основном бордере:
-
+```
 router ospf 1
   router-id 172.16.1.224
   log-adjacency-changes
@@ -200,10 +201,12 @@ ip access-list extended ЦО_сети
 route-map ЦО_сети permit 10
  match ip address ЦО_сети
 !
-
+```
 В общем и целом, я слишком много времени потратил на эту задачу и пожалуй скипну её, при необходимости вернусь к ней позже. 
 -------------------------------------------------------------------------
-3) На роутере филиала по-прежнему настроен dhcp-сервер. По заданию в компании он единый и располагается в ЦО
+3)
+```
+На роутере филиала по-прежнему настроен dhcp-сервер. По заданию в компании он единый и располагается в ЦО
 ip dhcp pool userpool
 network 172.16.8.0 255.255.255.0
 default-router 172.16.8.1
@@ -214,6 +217,7 @@ option 150 ip 172.16.4.10
 ip dhcp pool printer_pool
 network 172.16.10.0 255.255.255.0
 default-router 172.16.10.1
+```
 # ответ : удалил dhcp на филиальном роутере. 
 
 4) Режим работы ТД настраивается на контроллере, сейчас ТД по-прежнему гонят траффик юзеров не через контроллер, а локально. Покажите скриншот, где меняется эта настройка и можно её не менять.
