--- a/Тестирование.md
+++ b/Тестирование.md
@@ -218,7 +218,8 @@ ip dhcp pool printer_pool
 network 172.16.10.0 255.255.255.0
 default-router 172.16.10.1
 ```
-# ответ : удалил dhcp на филиальном роутере.  ![image](https://github.com/user-attachments/assets/4e817ac1-3b1f-464d-8ca0-8ab81faea457)
+# ответ : удалил dhcp на филиальном роутере. Добавил пулы, доконфигурировал интерфейсы, всё рабоает 
+![image](https://github.com/user-attachments/assets/4e817ac1-3b1f-464d-8ca0-8ab81faea457)
 
 ![image](https://github.com/user-attachments/assets/8d6ee137-271d-4dc0-9a0b-87a534f7e8d6)
 
