--- a/Тестирование.md
+++ b/Тестирование.md
@@ -162,3 +162,26 @@ default-router 172.16.10.1
    
 ![Снимок экрана 2024-09-15 173112](https://github.com/user-attachments/assets/53346456-9b82-4c58-8dc7-9cae92706713)
 
+------------------------------------------------------------------------------------------------------------------------------
+29 сентября 2024 года, 4 итерация =) 
+косяки:
+
+Добрый день!
+Настройка WLAN контроллера выполнена правильно.
+
+1) Телефон в филиале не зарегистрирован на voip сервере. Нужно добавить нужную опцию в настройках dhcp-пула.
+# ответ :  добавил , всё завелось.
+
+![Снимок экрана 2024-09-29 234843](https://github.com/user-attachments/assets/56bd97f2-3211-426f-9b66-0bdede325478)
+![Снимок экрана 2024-09-29 234706](https://github.com/user-attachments/assets/8b7eeb5b-f874-4ee2-be6e-eb6ded9229c6)
+
+Пограничный маршрутизатор перестал анонсировать маршрут по умолчанию после удаления статического маршрута из его конфигурации. OSPF не может анонсировать маршрут по умолчанию пока его нет в его таблице маршрутизации. Поэтому надо добавить статический маршрут без указания реального некстхопа:
+ip route 0.0.0.0 0.0.0.0 Null0
+После этого маршрут по умолчанию будет сгенерировать и отправлен сетевым устройствам ЦО. Данную команды нужно выполнить на обоих бордерах.
+
+
+
+Для корректной отправки маршрутов в филиал нужно настроить соответствующе ospf зону, чтобы в зону 2 не отправлялся маршрут по умолчанию. Тупиковая зона, в которую не отправляются маршруты по умолчанию.
+
+Для отказоустойчивого доступа к DMZ серверу настройку проброса порта нужно выполнить на обоих бордерах.
+Спасибо за работу! Если будут вопросы, пишите в дискорд.
