--- a/Тестирование.md
+++ b/Тестирование.md
@@ -175,11 +175,15 @@ default-router 172.16.10.1
 ![Снимок экрана 2024-09-29 234843](https://github.com/user-attachments/assets/56bd97f2-3211-426f-9b66-0bdede325478)
 ![Снимок экрана 2024-09-29 234706](https://github.com/user-attachments/assets/8b7eeb5b-f874-4ee2-be6e-eb6ded9229c6)
 
-Пограничный маршрутизатор перестал анонсировать маршрут по умолчанию после удаления статического маршрута из его конфигурации. OSPF не может анонсировать маршрут по умолчанию пока его нет в его таблице маршрутизации. Поэтому надо добавить статический маршрут без указания реального некстхопа:
+2) Пограничный маршрутизатор перестал анонсировать маршрут по умолчанию после удаления статического маршрута из его конфигурации. OSPF не может анонсировать маршрут по умолчанию пока его нет в его таблице маршрутизации. Поэтому надо добавить статический маршрут без указания реального некстхопа:
 ip route 0.0.0.0 0.0.0.0 Null0
 После этого маршрут по умолчанию будет сгенерировать и отправлен сетевым устройствам ЦО. Данную команды нужно выполнить на обоих бордерах.
 
+# ответ :  добавил , всё завелось.
 
+![Снимок экрана 2024-09-29 235939](https://github.com/user-attachments/assets/4f86c600-321d-4e72-beb4-002cfc5cc290)
+
+![Снимок экрана 2024-09-29 235952](https://github.com/user-attachments/assets/85fcb986-dcd2-4bfb-9c10-e95bc52434f4)
 
 Для корректной отправки маршрутов в филиал нужно настроить соответствующе ospf зону, чтобы в зону 2 не отправлялся маршрут по умолчанию. Тупиковая зона, в которую не отправляются маршруты по умолчанию.
 
