--- a/Тестирование.md
+++ b/Тестирование.md
@@ -185,7 +185,11 @@ ip route 0.0.0.0 0.0.0.0 Null0
 
 ![Снимок экрана 2024-09-29 235952](https://github.com/user-attachments/assets/85fcb986-dcd2-4bfb-9c10-e95bc52434f4)
 
-Для корректной отправки маршрутов в филиал нужно настроить соответствующе ospf зону, чтобы в зону 2 не отправлялся маршрут по умолчанию. Тупиковая зона, в которую не отправляются маршруты по умолчанию.
 
-Для отказоустойчивого доступа к DMZ серверу настройку проброса порта нужно выполнить на обоих бордерах.
-Спасибо за работу! Если будут вопросы, пишите в дискорд.
+3) Для отказоустойчивого доступа к DMZ серверу настройку проброса порта нужно выполнить на обоих бордерах.
+
+# ответ : да вроде так и есть, сервер DMZ доступен с обоих бордеров
+
+![Снимок экрана 2024-09-30 000847](https://github.com/user-attachments/assets/d8ee7c76-1f3e-48fa-a97f-6f3f806b6588)
+![Снимок экрана 2024-09-30 000822](https://github.com/user-attachments/assets/1d64ca95-7449-40e4-9797-2dc3e00af830)
+
